# eia

./: LICENSE  Pipfile  README.md  pyproject.toml
.github/workflows/: build.yaml  deploy.yaml
eia/: api_models.py  client.py
eia_client/: __init__.py  api_models.py  client.py
example/: example.ipynb
tests/: test_api_params.py  test_client.py
tests/integration/: test_integration.py
