[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eia"
version = "0.3.0"
description = "Client for interacting with the EIA API"
authors = [
  { name = "James Campbell" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
    "requests >= 2.26.0",
    "pandas >= 1.0",
    "pydantic >= 1.7",
    "ratelimit >= 2.2.1"
]

[project.urls]
"Homepage" = "https://github.com/jcampbell/eia"
"Bug Tracker" = "https://github.com/jcampbell/eia/issues"

[options]
packages = ["eia"]
